[CircleCI] Add dependencies install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,6 @@ jobs:
       - image: circleci/ruby:2.6.3
     steps:
       - checkout
-      - run: echo "Youpi ! On est dans la première étape de l'installation de notre CI :)"
+      - run:
+          name: Install project dependencies
+          command: bin/install
