--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,15 @@ jobs:
       - image: circleci/ruby:2.6.3
     steps:
       - checkout
+      - restore_cache:
+          key: bundler-{{ checksum "Gemfile.lock" }}
       - run:
           name: Install project dependencies
           command: bin/install
       - run:
           name: Test the project
           command: bundle exec rspec hello_world_spec.rb
+      - save_cache:
+          key: bundler-{{ checksum "Gemfile.lock" }}
+          paths:
+            - /usr/local/bundle
