[CircleCI] Use workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,24 @@ jobs:
       - run:
           name: Install project dependencies
           command: bin/install
-      - run:
-          name: Test the project
-          command: bundle exec rspec hello_world_spec.rb
       - save_cache:
           key: bundler-{{ checksum "Gemfile.lock" }}
           paths:
             - /usr/local/bundle
+  test:
+    docker:
+      - image: circleci/ruby:2.6.3
+    steps:
+      - checkout
+      - run:
+          name: Test the project
+          command: bundle exec rspec hello_world_spec.rb
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
