[CodeExample] Add node-express-example folder

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node node-express-example/index.js"
   },
   "repository": {
     "type": "git",
